--- a/Mobile Development/app/src/main/res/layout/item_library.xml
+++ b/Mobile Development/app/src/main/res/layout/item_library.xml
@@ -5,14 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_marginBottom="10dp"
     card_view:cardBackgroundColor="@android:color/transparent"
     card_view:cardCornerRadius="10dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/library_card_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="10dp">
+        card_view:cardBackgroundColor="#EEEEEE"
+        card_view:cardCornerRadius="10dp"
+        tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -22,38 +24,71 @@
             card_view:cardCornerRadius="10dp">
 
             <ImageView
-                android:id="@+id/img_item_photo"
+                android:id="@+id/img_gambar"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="0dp"
                 android:scaleType="centerCrop"
+                card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent"
                 card_view:srcCompat="@drawable/contoh_perpus" />
 
             <TextView
-                android:id="@+id/tv_item_title"
+                android:id="@+id/tv_nama_perpus"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:fontFamily="@font/poppins_bold"
                 android:text="Perpustakaan Universitas Jenderal Achmad Yani (Unjani)"
-                android:textSize="16sp"
+                android:textColor="#1A1A1A"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
+                card_view:layout_constraintStart_toEndOf="@+id/img_gambar"
                 card_view:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_item_author"
+                android:id="@+id/tv_jarak"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/poppins_bold"
+                android:gravity="center_vertical"
+                android:textAlignment="textEnd"
+                android:textColor="#8A8A8A"
+                android:textSize="12sp"
+                android:visibility="gone"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toStartOf="@+id/imageButton2"
+                card_view:layout_constraintStart_toEndOf="@+id/img_gambar"
+                card_view:layout_constraintTop_toTopOf="@+id/imageButton2"
+                tools:text="@string/distance" />
+
+            <ImageButton
+                android:id="@+id/imageButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:visibility="gone"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintTop_toBottomOf="@+id/textView7"
+                card_view:srcCompat="@drawable/ic_directions" />
+
+            <TextView
+                android:id="@+id/textView7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="Perpustakaan Universitas Jenderal Achmad Yani (Unjani)"
+                card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
-                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_title"
-                tools:text="@string/nama_author" />
+                card_view:layout_constraintStart_toEndOf="@+id/img_gambar"
+                card_view:layout_constraintTop_toBottomOf="@+id/tv_nama_perpus" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
