--- a/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,6 +10,6 @@
         android:icon="@drawable/baseline_library_books_24"/>
     <item
         android:id="@+id/profile"
-        android:title="@string/profil"
-        android:icon="@drawable/baseline_person_24"/>
+        android:icon="@drawable/ic_profile"
+        android:title="@string/profil" />
 </menu>
