--- a/Mobile Development/app/src/main/res/navigation/main_navigation.xml
+++ b/Mobile Development/app/src/main/res/navigation/main_navigation.xml
@@ -18,7 +18,8 @@
             app:destination="@id/forgotPasswordFragment" />
         <action
             android:id="@+id/action_loginFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/mainFragment"
+            app:popUpToInclusive="true" />
 
     </fragment>
     <fragment
@@ -49,11 +50,12 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_welcomeFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/mainFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/mainFragment"
-        android:name="dicoding.zulfikar.literasearchapp.view.book.MainFragment"
+        android:name="dicoding.zulfikar.literasearchapp.view.menu.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main">
         <action
@@ -64,18 +66,26 @@
             app:destination="@id/libraryFragment" />
         <action
             android:id="@+id/action_mainFragment_to_profileFragment"
-            app:destination="@id/profileFragment" />
+            app:destination="@id/profileFragment">
+
+        </action>
     </fragment>
     <fragment
         android:id="@+id/bookDetailFragment"
-        android:name="dicoding.zulfikar.literasearchapp.view.detail.BookDetailFragment"
+        android:name="dicoding.zulfikar.literasearchapp.view.book.BookDetailFragment"
         android:label="fragment_book_detail"
         tools:layout="@layout/fragment_book_detail" />
     <fragment
         android:id="@+id/libraryDetailFragment"
-        android:name="dicoding.zulfikar.literasearchapp.view.detail.LibraryDetailFragment"
+        android:name="dicoding.zulfikar.literasearchapp.view.library.LibraryDetailFragment"
         android:label="fragment_library_detail"
-        tools:layout="@layout/fragment_library_detail" />
+        tools:layout="@layout/fragment_library_detail">
+        <argument
+            android:name="libraryData"
+            android:defaultValue="@null"
+            app:argType="dicoding.zulfikar.literasearchapp.data.model.Library"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/bookFragment"
         android:name="dicoding.zulfikar.literasearchapp.view.book.BookFragment"
@@ -83,17 +93,24 @@
         tools:layout="@layout/fragment_book">
         <action
             android:id="@+id/action_bookFragment_to_bookDetailFragment"
-            app:destination="@id/bookDetailFragment" >
-        </action>
+            app:destination="@id/bookDetailFragment"/>
     </fragment>
     <fragment
         android:id="@+id/libraryFragment"
         android:name="dicoding.zulfikar.literasearchapp.view.library.LibraryFragment"
         android:label="fragment_library"
         tools:layout="@layout/fragment_library">
+        <argument
+            android:name="libraryData"
+            android:defaultValue="@null"
+            app:argType="dicoding.zulfikar.literasearchapp.data.model.Library"
+            app:nullable="true" />
         <action
             android:id="@+id/action_libraryFragment_to_libraryDetailFragment"
-            app:destination="@id/libraryDetailFragment" />
+            app:destination="@id/libraryDetailFragment">
+
+        </action>
+
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
