--- a/Mobile Development/app/src/main/res/values/colors.xml
+++ b/Mobile Development/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="iconInactiveColor">@color/abu</color>
     <color name="abu_muda">#EEEEEE</color>
     <color name="abu">#999999</color>
+    <color name="grey">#999999</color>
 </resources>
